Tests/CompilerTests/negative/missing-yield-value.expected
negative/missing-yield.hylo:4.8: error: expected expression
  yield
       ^
